# ChangeLog for x11-plugins/wmclockmon
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmclockmon/ChangeLog,v 1.13 2004/04/13 18:25:40 rizzo Exp $

  13 Apr 2004; Don Seiler <rizzo@gentoo.org>; wmclockmon-0.3.0.ebuild,
  wmclockmon-0.4.0.ebuild, wmclockmon-0.5.0.ebuild, wmclockmon-0.7.2.ebuild:
  Changed dependency to virtual/x11 to work with x11-base/xorg-x11

  12 Apr 2004; Daniel Ahlberg <aliz@gentoo.org> wmclockmon-0.7.2.ebuild:
  Stable on amd64.

*wmclockmon-0.7.2 (13 Mar 2004)

  13 Mar 2004; Markus Nigbur <pyrania@gentoo.org> wmclockmon-0.5.0.ebuild,
  wmclockmon-0.7.2.ebuild:
  Version bump. Closing bug #44573.

*wmclockmon-0.5.0 (17 Nov 2003)

  17 Nov 2003; Markus Nigbur <pyrania@gentoo.org> wmclockmon-0.1.3.ebuild,
  wmclockmon-0.2.0.ebuild, wmclockmon-0.4.0.ebuild, wmclockmon-0.5.0.ebuild:
  version bump

*wmclockmon-0.4.0 (11 Oct 2003)

  11 Oct 2003; Markus Nigbur <pyrania@gentoo.org> wmclockmon-0.4.0.ebuild:
  Version bump. Thanks to Noberasco Michele (bug 30838)

*wmclockmon-0.3.0 (27 Sep 2003)

  27 Sep 2003; Markus Nigbur <pyrania@gentoo.org> wmclockmon-0.3.0.ebuild:
  Bump (bug #29742).

  25 Aug 2003; Jason Wever <weeve@gentoo.org> wmclockmon-0.2.0.ebuild:
  Marked stable for sparc to fix bug #27311.

  17 Aug 2003; Nick Hadaway <raker@gentoo.org> wmclockmon-0.2.0.ebuild:
  Added gtk+ to DEPEND.  Cleaned up the ebuild and added docs.
  All this prompted by bug #26833.  Thanks Eric. :)

  12 Jun 2003; <msterret@gentoo.org> wmclockmon-0.1.3.ebuild,
  wmclockmon-0.2.0.ebuild:
  add Header

*wmclockmon-0.2.0 (22 Dec 2002)

  23 Dec 2002; Nick Hadaway <raker@gentoo.org> wmclockmon-0.2.0.ebuild :
  Marked stable.

  22 Dec 2002; Nick Hadaway <raker@gentoo.org> wmclockmon-0.2.0.ebuild,
  files/digest-wmclockmon-0.2.0 :
  Version bump.  Please comment on bug #11909.

*wmclockmon-0.1.3 (29 Oct 2002)

  29 Oct 2002; Brad Cowan <bcowan@gentoo.org> wmclockmon-0.1.3.ebuild,