@@ -1,10 +1,12 @@
-MD5 15edd7dae904c2b671ecfd1740c446a2 ChangeLog 2076
+MD5 a407ec71c9536fb12ed5741676dabcdf wmclockmon-0.3.0.ebuild 720
+MD5 1efa2ac05391a6c096f403a9a541203f wmclockmon-0.7.2.ebuild 721
+MD5 1efa2ac05391a6c096f403a9a541203f wmclockmon-0.8.0.ebuild 721
+MD5 000a351e35411946e427d37038ad2753 wmclockmon-0.4.0.ebuild 720
+MD5 ed3bb98e69515276badbb7bc4c6f60bb wmclockmon-0.5.0.ebuild 720
+MD5 b6aefea8cb91aa4446e9e3bd9c8fdf1c ChangeLog 2075
 MD5 62ba71d3b2fa785a4cbd5d47fdbd0eb6 metadata.xml 165
-MD5 0bf02c7449b8152b35fc2d45868fecac wmclockmon-0.3.0.ebuild 721
-MD5 dbddda6c63f8b429ab7a72f677e3e427 wmclockmon-0.4.0.ebuild 721
-MD5 d8eff9b61dfa6a3fc83c158c8ef5fa7f wmclockmon-0.5.0.ebuild 721
-MD5 f959a9313b604f330716827b971fdee3 wmclockmon-0.7.2.ebuild 722
 MD5 a1d2f3d62be463f807482d1cd656231f files/digest-wmclockmon-0.3.0 68
 MD5 77fe91a512c1f6dcbf867c8fbaf8a57b files/digest-wmclockmon-0.4.0 68
 MD5 fa5a288c8b9f60bbb5a0bf393f063671 files/digest-wmclockmon-0.5.0 68
 MD5 1a8155911e433721f18db54810c63a7c files/digest-wmclockmon-0.7.2 68
+MD5 b5113806e188f8e506b0e6c5b51100fd files/digest-wmclockmon-0.8.0 68
