@@ -1,0 +1,1 @@
+MD5 fb6d9c18d2598a5a0a9e56ae058c0f50 wmclockmon-0.8.0.tar.gz 141082
