@@ -1,6 +1,14 @@
 # ChangeLog for x11-plugins/wmclockmon
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmclockmon/ChangeLog,v 1.13 2004/04/13 18:25:40 rizzo Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmclockmon/ChangeLog,v 1.14 2004/06/24 12:51:17 s4t4n Exp $
+
+*wmclockmon-0.8.0 (24 Jun 2004)
+
+  13 Mar 2004; Michele Noberasco <s4t4n@gentoo.org> wmclockmon-0.8.0.ebuild:  
+  Version bump.
+  wmclockmon-0.7.2.ebuild: Stable on x86.
+  wmclockmon-0.3.0.ebuild, wmclockmon-0.4.0.ebuild, wmclockmon-0.5.0.ebuild:
+  Remove old versions...
 
   13 Apr 2004; Don Seiler <rizzo@gentoo.org>; wmclockmon-0.3.0.ebuild,
   wmclockmon-0.4.0.ebuild, wmclockmon-0.5.0.ebuild, wmclockmon-0.7.2.ebuild:
